2013-03-05  Borut Razem  <borutr@users.sourceforge.net>
  * gputils/gpasm/evaluate.c, gputils/gpasm/directive.c,
    gputils/gpasm/processor.c, gputils/gpasm/gperror.c,
    gputils/gpasm/gperror.h: fix for 16 bit extended instruction set,
    Byte-Oriented and Bit-Oriented Instructions in Indexed Literal
    Offset Mode
  * gputils/gpasm/testsuite/gpasm.old/test0.asm,
    gputils/gpasm/testsuite/gpasm.old/x.asm: dont use halt as a label
    since it is a preudo operatin code

2013-03-04  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpprocessor.c: Changed some class to PROC_CLASS_PIC12E,
    new member in the struct px pics[]: is_16bit_extended

2013-03-03  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpprocessor.h: added new class PROC_CLASS_PIC12E;
    added member is_16bit_extended to px structure
  * gpasm/gpasm.h.in, gpasm/cod.c: removed unneeded gvt_org

2013-03-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/*.inc, lkr/*.lkr:
    Updated based on the mplabx-1.7.

2013-01-09  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/parse.y:
    fixed bug #260 - "gpasm crash on syntax error in included file"

2013-01-02  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx: New MCU-s based on the mplabx-1.6.

2013-01-02  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/Makefile.am, header/Makefile.in, header/p16f570.inc,
    header/p16f753.inc, header/p16hv753.inc, header/p16lf1824t39a.inc,
    lkr/Makefile.am, lkr/Makefile.in, lkr/16f570_g.lkr, lkr/16f753_g.lkr,
    lkr/16hv753_g.lkr, lkr/16lf1824t39a_g.lkr, libgputils/gpprocessor.c:
    New MCU-s based on the mplabx-1.6.

2013-01-02  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/p16f720.inc, header/p16f721.inc, header/p16lf720.inc,
    header/p16lf721.inc, header/p16lf1788.inc, header/p16lf1789.inc,
    header/p16lf1902.inc, header/p16lf1903.inc, header/p18f65j94.inc,